# TabbyWeb

./: Dockerfile
.github/workflows/: docker.yml  lint.yml
backend/: pyproject.toml
backend/tabby/: settings.py
frontend/: package.json
