[tool.poetry]
name = "tabby-web"
version = "1.0.0"
description = ""
authors = ["Eugeny <e@ajenti.org>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.25"
djangorestframework = "^3.16.1"
djangorestframework-dataclasses = "^0.9"
social-auth-app-django = "5.4.0"
python-dotenv = "^0.17.1"
websockets = "^10.4"
gql = "^2.0.0"
dj-database-url = "^0.5.0"
mysqlclient = "^2.0.3"
gunicorn = "22.0.0"
Twisted = "22.4.0"
semver = "^2.13.0"
requests = "2.32.5"
pyga = "^2.6.2"
django-cors-headers = "^3.7.0"
cryptography = "42.0.0"
fsspec = "^2021.7.0"
whitenoise = "^5.3.0"
sqlparse = "0.5.0"
pyjwt = "2.4.0"
cffi = "2.0.0"
urllib3 = "2.5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
